--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,24 @@
-.dd{
-    background-color: red;
-}
+.mt-0 {
+    margin-top: 100px !important;
+  }
+
+  .icons{
+    padding: 10px;
+    width: 50px;
+    height: 50px;
+    background-color:#0d6efd;
+    color: white;
+    transform: translateY(-20px);    
+  }
+  .icon{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .text h3{
+    text-align: center;
+  }
+  .text p{
+    text-align: center;
+  }
